# Ripple

./: .gitignore  .gitmodules  1  CODEOWNERS.md  Cargo.toml  README.md  ci-params.sh  compile.sh  map-ripple-config.sh  run.sh  runCI.sh  run_sanity_on_mock_device.sh  setup  setup_ripple_with_mock_thunder.sh  socat.sh  utils.sh
.cargo/: config.toml
core/main/: Cargo.toml
core/main/src/bootstrap/: start_communication_broker.rs  start_fbgateway_step.rs  start_ws_step.rs
core/main/src/bootstrap/extn/: load_extn_step.rs
core/main/src/broker/: broker_utils.rs  endpoint_broker.rs  event_management_utility.rs  rules_engine.rs
core/main/src/firebolt/: firebolt_gateway.rs  firebolt_middleware_service.rs  firebolt_ws.rs  mod.rs  rpc_router.rs
core/main/src/firebolt/handlers/: account_rpc.rs  advertising_rpc.rs  audio_description_rpc.rs  authentication_rpc.rs  capabilities_rpc.rs  closed_captions_rpc.rs  device_rpc.rs  discovery_rpc.rs  keyboard_rpc.rs  lcm_rpc.rs  lifecycle_rpc.rs  localization_rpc.rs  metrics_rpc.rs  parameters_rpc.rs  privacy_rpc.rs  profile_rpc.rs  provider_registrar.rs  secure_storage_rpc.rs  user_grants_rpc.rs  voice_guidance_rpc.rs
core/main/src/processor/storage/: storage_manager.rs  storage_manager_utils.rs
core/main/src/state/: extn_state.rs  metrics_state.rs  mod copy.rs  platform_state.rs  types.rs
core/main/src/utils/: rpc_utils.rs
core/sdk/: Cargo.toml
core/sdk/src/: lib.rs
core/sdk/src/api/: apps.rs
core/sdk/src/mock/: errors.rs  mock_config.rs  mock_data.rs  mock_thunder.rs  mock_web_socket_server.rs  utils.rs
core/sdk/src/utils/: error.rs  rpc_utils.rs
device/mock_device/src/: mock_device_ffi.rs
device/thunder_ripple_sdk/: Cargo.toml
device/thunder_ripple_sdk/src/: utils.rs
device/thunder_ripple_sdk/src/client/: thunder_client.rs
device/thunder_ripple_sdk/src/processors/: thunder_package_manager.rs
docs/: device_manifest_default_values.xlsx
docs/puml/: integrated_player.puml  lincpin_with_as.puml  provider_tags.puml  xvp_xtn.puml
dpab_appsanity/: .gitmodules  Cargo.toml  build.rs  grcov.sh
dpab_appsanity/.cargo/: config.toml
dpab_appsanity/ci/: params-dpab-appsanity.yaml  pipeline-dpab-appsanity.yaml
dpab_appsanity/ci/scripts/: get-coverage-from-main.sh  pr-dpab-appsanity.sh  pr-dpab-appsanity.yaml  utils.sh
dpab_appsanity/docs/puml/: permission_service.puml
dpab_appsanity/dpab_core/: .pre-commit-config.yaml  Cargo.toml  README.md  grcov.sh
dpab_appsanity/dpab_core/ci/: params-dpab-core.yaml  pipeline-dpab-core.yaml  update-pipeline.sh
dpab_appsanity/dpab_core/ci/scripts/: get-coverage-from-main.sh  pr-dpab-core.sh  pr-dpab-core.yaml  utils.sh
dpab_appsanity/dpab_core/src/: gateway.rs  lib.rs  message.rs
dpab_appsanity/dpab_core/src/model/: advertising.rs  api_grants.rs  apps.rs  auth.rs  badger.rs  discovery.rs  firebolt.rs  hammer.rs  metrics.rs  permissions.rs  privacy.rs  secure_storage.rs  sync_and_monitor.rs  thor_permission_registry.rs  thor_permission_registry.yaml  user_grants.rs
dpab_appsanity/rust-linchpin-client/: .gitignore  Cargo.toml  README.md  rust-linchpin-client.code-workspace
dpab_appsanity/rust-linchpin-client/src/: connection_manager.rs  lib.rs  linchpin_client.rs  linchpin_connection.rs
dpab_appsanity/rust-linchpin-client/src/model/: client_messages.rs  linchpin_messages.rs
dpab_appsanity/src/: lib.rs
dpab_appsanity/src/client/: xvp_playback.rs  xvp_session.rs  xvp_videoservice.rs
dpab_appsanity/src/extn/: appsanity_permission_processor.rs  eos_ffi.rs
dpab_appsanity/src/gateway/: appsanity_gateway.rs  default_appsanity_config.json
dpab_appsanity/src/manager/: metrics_manager.rs
dpab_appsanity/src/service/: appsanity_account_link.rs  appsanity_advertising.rs  appsanity_auth.rs  appsanity_discovery.rs  appsanity_metrics.rs  appsanity_permission.rs  appsanity_privacy.rs  appsanity_resolver.rs  distp_secure_storage.rs  thor_permission.rs  xvp_sync_and_monitor.rs
dpab_appsanity/src/service/catalog/: appsanity_catalog.rs  catalog_persistence.rs
dpab_appsanity/src/sync_and_monitor/: privacy_sync_monitor.rs  user_grants_sync_monitor.rs
dpab_appsanity/src/util/: channel_util.rs  cloud_linchpin_monitor.rs  cloud_periodic_sync.rs  cloud_sync_monitor_utils.rs  linchpin_proxy.rs  service_util.rs  sync_settings.rs
dpab_appsanity/test/scripts/: README.md  ad-init.sh  authentication.device.sh  authentication.root.sh  authentication.session.sh  authentication.token.sh  foo.sh  metrics.action.sh  metrics.mediaProgress.sh  resapi.sh  websocat-example.sh
dpab_appsanity/test/scripts/accessibility/: accessibility.setSpeed.sh  multi.sh  subscribe.sh  thunder.accessibility.setSpeed.sh  voiceguidance_disabled.sh  voiceguidance_enabled.sh
dpab_appsanity/test/scripts/badger/: badger_shutdown.sh  ready.sh
dpab_appsanity/test/scripts/lifecycle/: close.sh  finished.sh
dpab_appsanity/test/scripts/localization/: get.sh  remove.sh  set.sh
dpab_appsanity/test/scripts/metrics/: action.sh  all.sh  error.sh  mediaLoadStart.sh  mediaPause.sh  mediaPlay.sh  mediaPlaying.sh  mediaRateChange.sh  mediaRenditionChange.sh  mediaSeeked.sh  mediaSeeking.sh  mediaWaiting.sh  page.sh  ready.sh  signin.sh  signout.sh  start_content.sh  stop_content.sh
dpab_appsanity/test/scripts/storage/: get.sh  remove.sh  set.sh
examples/rpc_extn/src/: rpc_example_ffi.rs
examples/rpc_extn/src/rpc/: legacy_jsonrpsee_extn.rs
kb/: README.md
kb/code/: cargo_tools.md  partner_artifactory.md  project_struture.md
kb/code/supported_files_and_images/: Cargo.toml  cargo-bloat-result.json  cargo-bloat-ripple_comcast_extns.json  thunder_report.html  unused_features.txt
kb/contribution/: Create_route53_dns_records.md  TLS_Certificate_for_Instio_Ingress_Gateway.md  pull_requests.md
kb/ops/: janus.md
mock/: extn.json  firebolt-2-rpc.json  firebolt-entos-runtime-openrpc.json  firebolt-open-rpc.json  manifest.json  mock-thunder-device.json  ripple-rpc.json
mock/rules/: ripple.common.rules.json
src/: lib.rs
src/governance/: privacy.rs  xvp_privacy.rs
triage/: README.md  journeys.sh
(+9 files in other folders)
