[workspace]
resolver = "2"

members = [
    "Ripple/core/sdk",
    "Ripple/core/tdk",
    "Ripple/device/thunder_ripple_sdk",
    "Ripple/core/main",
    "Ripple/core/launcher",
    "Ripple/device/thunder",
    "Ripple/distributor/general",
    "Ripple/examples/rpc_extn",
    "Ripple/examples/tm_extn",
    "ripple-eos-thunder-extn",
    "ripple-badger-extn",
    "ripple-eos-distributor-extn",
    "ripple-bolt-extn",
    "ripple-eos-observability-extn",
    "Ripple/device/mock_device",
    "ripple-eos-test-utils",
]

[workspace.package]
version = "1.16.0"    # the current version, obeying semver
edition = "2021"     # the edition, will have no effect on a resolver used in the workspace
rust-version = "1.69.0" #MSRV

[workspace.dependencies]
base64 = { version = "0.21.5", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = { version = "0.3.21", default-features = false }
futures-channel = { version = "0.3.21", default-features = false }
jsonrpsee = { version = "0.9.0", default-features = false }
querystring = { version = "1.1.0", default-features = false }
regex = { version = "1.10.4", features = ["std"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false}
tokio-tungstenite = { version = "0.20.1", default-features = false }
url = { version = "2.2.2", default-features = false}
urlencoding = { version = "2.1.0", default-features = false}
uuid = { version = "1.1.2", default-features = false }
ripple_sdk = { path = "./Ripple/core/sdk" }
ripple_eos_test_utils = { path = "./ripple-eos-test-utils"}

[profile.release]
strip=true
opt-level="z"
codegen-units=1
lto=true
panic="abort"
