[package]
name = "dpab_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
hdmiout=[]
panelout=[]
local_dev=[]
full=[]

[dependencies]
async-trait = "^0.1.57"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["macros", "sync", "rt"] }
thiserror = "1.0"
serde_json = "1.0"
serde_yaml = "0.8.25"
tracing = "0.1.32"
tracing-futures = "0.2.5"
url = "1.7"


[dev-dependencies]
tokio-test = "*"
